--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ This page helps importing financial data into bookkeeping software. To be more p
 
 <p>The resulting QIF files are suitable for import in GnuCash and Microsoft Money, amongst others.</p>
 
-<div id="update"><strong>Update 7 October 2017</strong>: the converter has been entirely re-written from PHP to JavaScript. This means that the data files no longer need to be uploaded to the server. Instead, the conversion now will take place on your own computer. The <a href="old">old version</a> is still available, but will be phased out soon.
+<div id="update"><strong>Update 7 October 2017</strong>: the converter has been entirely re-written from PHP to JavaScript. This means an increase in privacy, as the data files no longer need to be uploaded to the server. The <a href="old">old version</a> is still available, but will be phased out soon.
 <p>Support for the following banks is not yet enabled in the new version, as I don't have example CSV files. To help me re-enable it, please send (the first couple of lines of) a CSV-file for these banks to me at <a href="mailto:qif&#64;matthijsmelissen.nl">qif&#64;matthijsmelissen.nl</a>
 
 <ul>
