--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ This page helps importing financial data into bookkeeping software. To be more p
 <li>Spuerkees / BCEE (Banque et Caisse d'Epargne de l'Etat) (Luxembourg)</li>
 <li>SEB Skandinaviska Enskilda Banken AB (Sweden)</li>
 </ul></p>
+<p>For the time being, you can use the old version for these banks.</p>
 </div>
 
 
