--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1>Conversion from CSV to QIF</h1>
 
-This page helps importing financial data into bookkeeping software. To be more precise, it converts CSV files (which you can obtain by downloading your financial data from your bank's website) to QIF files, which can be imported into accounting software.
+This page helps with importing financial data into bookkeeping software. It converts CSV files (which you can download from your bank) to QIF files. QIF files in turn can be imported in programs like GnuCash or Microsoft Money.
 
 <p><strong>Update</strong>: the converter now works entirely in JavaScript, so your financial data remains on your own computer and does not need to be uploaded to the server.</strong>
 
@@ -22,9 +22,6 @@ This page helps importing financial data into bookkeeping software. To be more p
 </ul>
 
 <p>To help me add support for other banks, please send (the first couple of lines of) a CSV file to me at <a href="mailto:qif&#64;matthijsmelissen.nl">qif&#64;matthijsmelissen.nl</a>
-
-<p>The resulting QIF files are suitable for import in GnuCash and Microsoft Money, amongst others.</p>
-
 
 <form id="form">
 <table>
