Add support for Swedish banks

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@ This page helps with importing financial data into bookkeeping software. It conv
 
 <p>Currently it works for the following banks:</p>
 <ul>
-<li>ABN AMRO (Nederland)</li>
-<li>ING (Nederland)</li>
+<li>ABN AMRO (The Netherlands)</li>
+<li>ING (The Netherlands)</li>
+<li>SEB (Sweden)</li>
+<li>Skandia (Sweden)</li>
+<li>JAK (Sweden)</li>
 </ul>
 
 <p>To help me add support for other banks, please send (the first couple of lines of) a CSV file to me at <a href="mailto:qif&#64;matthijsmelissen.nl">qif&#64;matthijsmelissen.nl</a>
@@ -28,6 +31,9 @@ This page helps with importing financial data into bookkeeping software. It conv
 <tr><label><td>Bank</td><td><select name="bank" id="bank">
 	<option value="abnamro">ABN Amro</option>
 	<option value="ing">ING</option>
+	<option value="seb">SEB</option>
+	<option value="skandia">Skandia</option>
+	<option value="jak">JAK</option>
 </select></label></td></tr>
 <tr><td>&nbsp;</td><td><input type="submit" value="Submit"></td></tr>
 </table>
