Add ASN Bank support

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ This page helps with importing financial data into bookkeeping software. It conv
 <p>Currently it works for the following banks:</p>
 <ul>
 <li>ABN AMRO (The Netherlands)</li>
+<li>ASN Bank (The Netherlands)</li>
 <li>ING (The Netherlands)</li>
 <li>SEB (Sweden)</li>
 <li>Skandia (Sweden)</li>
@@ -30,6 +31,7 @@ This page helps with importing financial data into bookkeeping software. It conv
 <tr><label><td>Upload CSV</td><td><input type="file" name="csv" id="file-input" /></label></td></tr>
 <tr><label><td>Bank</td><td><select name="bank" id="bank">
 	<option value="abnamro">ABN Amro</option>
+	<option value="asn">ASN Bank</option>
 	<option value="ing">ING</option>
 	<option value="seb">SEB</option>
 	<option value="skandia">Skandia</option>
